// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login screen Renders Login Screen correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#242424",
      "height": 1334,
      "paddingLeft": 37.5,
      "paddingRight": 37.5,
      "paddingTop": 80,
      "width": 750,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#9D59FB",
        "justifyContent": "center",
        "marginVertical": 15,
        "opacity": 1,
        "paddingVertical": 10,
        "width": 675,
      }
    }
    testID="loginButton"
  >
    <Text
      style={
        {
          "color": "#FFF",
          "fontFamily": "Montserrat-Bold",
          "fontSize": 18,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFF",
            "fontFamily": "Montserrat-Regular",
            "fontSize": 18,
          }
        }
      >
        Presiona para entrar
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Renders About Screen correctly Renders About Screen correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFF",
      "height": 1334,
      "paddingLeft": 37.5,
      "paddingRight": 37.5,
      "paddingTop": 80,
      "width": 750,
    }
  }
>
  <Text
    style={
      {
        "color": "#242424",
        "fontFamily": "Montserrat-Regular",
        "fontSize": 18,
      }
    }
  >
    Contacto: itic.rodrigo@gmail.com
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#9D59FB",
        "justifyContent": "center",
        "marginVertical": 15,
        "opacity": 1,
        "paddingVertical": 10,
        "width": 675,
      }
    }
    testID="goToSettingsButton"
  >
    <Text
      style={
        {
          "color": "#FFF",
          "fontFamily": "Montserrat-Bold",
          "fontSize": 18,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFF",
            "fontFamily": "Montserrat-Regular",
            "fontSize": 18,
          }
        }
      >
        Configuración
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Renders Home Screen correctly Renders Home Screen correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFF",
      "height": 1334,
      "paddingLeft": 37.5,
      "paddingRight": 37.5,
      "paddingTop": 80,
      "width": 750,
    }
  }
>
  <Text
    style={
      {
        "color": "#242424",
        "fontFamily": "Montserrat-Regular",
        "fontSize": 18,
      }
    }
  >
    Faltan 
    10 months
     para navidad
  </Text>
  <Text
    style={
      {
        "color": "#242424",
        "fontFamily": "Montserrat-Regular",
        "fontSize": 24,
      }
    }
  >
    Nombre app: 
    unknown
  </Text>
  <Text
    style={
      {
        "color": "#242424",
        "fontFamily": "Montserrat-Regular",
        "fontSize": 22,
      }
    }
  >
    Versión: 
    unknown
  </Text>
  <Text
    style={
      {
        "color": "#242424",
        "fontFamily": "Montserrat-Regular",
        "fontSize": 18,
      }
    }
  >
    DeviceId: 
    unknown
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#9D59FB",
        "justifyContent": "center",
        "marginVertical": 15,
        "opacity": 1,
        "paddingVertical": 10,
        "width": 675,
      }
    }
    testID="logoutButton"
  >
    <Text
      style={
        {
          "color": "#FFF",
          "fontFamily": "Montserrat-Bold",
          "fontSize": 18,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFF",
            "fontFamily": "Montserrat-Regular",
            "fontSize": 18,
          }
        }
      >
        Cerrar sesión
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Renders Settings Screen correctly Renders Settings Screen correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFF",
      "height": 1334,
      "paddingLeft": 37.5,
      "paddingRight": 37.5,
      "paddingTop": 80,
      "width": 750,
    }
  }
>
  <Text
    style={
      {
        "color": "#242424",
        "fontFamily": "Montserrat-Regular",
        "fontSize": 18,
      }
    }
  >
    Pantalla de configuración
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#9D59FB",
        "justifyContent": "center",
        "marginVertical": 15,
        "opacity": 1,
        "paddingVertical": 10,
        "width": 675,
      }
    }
    testID="goBackButton"
  >
    <Text
      style={
        {
          "color": "#FFF",
          "fontFamily": "Montserrat-Bold",
          "fontSize": 18,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFF",
            "fontFamily": "Montserrat-Regular",
            "fontSize": 18,
          }
        }
      >
        Atrás
      </Text>
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#9D59FB",
        "justifyContent": "center",
        "marginVertical": 15,
        "opacity": 1,
        "paddingVertical": 10,
        "width": 675,
      }
    }
    testID="themeButton"
  >
    <Text
      style={
        {
          "color": "#FFF",
          "fontFamily": "Montserrat-Bold",
          "fontSize": 18,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFF",
              "fontFamily": "Montserrat-Regular",
              "fontSize": 18,
            }
          }
          testID="darkText"
        >
          Activar modo oscuro
        </Text>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FFF",
                "fontSize": 20,
              },
              undefined,
              {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </Text>
  </View>
</View>
`;
